	  changes to terminal_init(). (DLR)
	- Remove redundant include of limits.h from nano.c.  nano.c
	  includes nano.h and nano.h includes limits.h. (DLR)
	- Add a func_key flag to the low-level input functions and the
	  currently existing high-level input functions, to indicate
	  extended keypad values.  This is needed for UTF-8 support.
	  Changes to get_kbinput(), get_translated_kbinput(),
	  get_shortcut(), get_edit_input(), etc. (DLR)
	- Add a multibuffer mode toggle to the "Execute Command" prompt,
	  for consistency with the "Read File" prompt.  Changes to
	  do_insertfile() and shortcut_init(). (DLR)
	- Add an ^X toggle to the "Execute Command" prompt to go back to
	  the "Insert File" prompt, and add a ^T toggle to the "Go To
	  Line" prompt to go back to the "Where Is" prompt.  Changes to
	  do_insertfile(), shortcut_init(), do_gotoline(), etc.
	- Make sure a few uninitialized static variables are initialized
	  to sane values. (DLR)
	- After reading in a file and detecting the format it's in, set
	  the file format flags (DOS_FILE and MAC_FILE) to match, and
	  preserve them across multiple file buffers.  Changes to
	  read_file(), add_open_file(), and load_open_file().  (DLR,
	  suggested by Bill Soudan)
	- Remove the -D/--dos and -M/--mac command line options, as they
	  aren't much use with the new file format autodetection. (DLR)
	- Add support for reading in UTF-8 sequences to the low-level
	  input routines.  Changes to get_kbinput() and
	  get_translated_kbinput(). (DLR)
	- Reduce search_last_line to a local variable in findnextstr(),
	  since it's always set to FALSE just before and after
	  findnextstr() is called and isn't used anywhere except in
	  findnextstr().  Changes to do_int_spell_fix(), findnextstr(),
	  do_search(), do_research(), do_replace(), and
	  do_find_bracket(). (DLR)
	- When saving or changing file positions, be sure not to ignore
	  placewewant.  Changes to do_int_spell_fix(), findnextstr(),